# cognitive-os

./: .env.example  .env.postgres.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONTRIBUTING.md  DONOR_CODE_POLICY.md  MANIFEST.in  NOTICE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  mypy.ini  pyproject.toml  pytest.ini  requirements-baseline.lock.txt  requirements.txt  roadmap.md  ruff.cognitive-os.toml
.codex/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: sprint-task.yml
.github/workflows/: ci.yml
LightAgent/: __init__.py  core.py  errors.py  flow.py  hooks.py  litellm_client.py  tracing.py  version.py
LightAgent/builtin_tools/: nos.py
benchmarks/datasets/: README.md
benchmarks/manifests/: sprint10-semantic-ci.yaml  sprint10-semantic-seed.yaml  sprint11-context-ci.yaml  sprint11-context-seed.yaml  sprint12-skill-ci.yaml  sprint12-skill-seed.yaml  sprint13-strategies-ci.yaml  sprint13-strategies-seed.yaml  sprint14-experience-ci.yaml  sprint14-experience-seed.yaml  sprint16-routing-ci.yaml  sprint16-routing-seed.yaml  sprint17-weakness-ci.yaml  sprint17-weakness-seed.yaml  sprint18-proposal-ci.yaml  sprint18-proposal-seed.yaml  sprint19-change-ci.yaml  sprint19-change-seed.yaml  sprint7-ci.yaml  sprint7-seed.yaml  sprint8-coding-ci.yaml  sprint8-coding-seed.yaml  sprint9-memory-ci.yaml  sprint9-memory-seed.yaml
cognitive_os/: __init__.py
config/: benchmarks.example.yaml  coding.example.yaml  context.example.yaml  controlled-changes.example.yaml  controller.example.yaml  corpus.example.yaml  experience.example.yaml  memory.example.yaml  proposals.example.yaml  providers.example.yaml  routing.example.yaml  semantic_memory.example.yaml  skills.example.yaml  strategies.example.yaml  tools.example.yaml  verifiers.example.yaml  weakness.example.yaml
docs/: FAQ.md  memory_trace_swarm_boundaries.md  roadmap.md  runtime_hooks.md  tracing.md
docs/adr/: 0001-lightagent-runtime-foundation.md  0002-thin-fork-and-upstream-policy.md  0003-python-312-and-uv.md  0004-local-state-ownership.md  0005-event-sourced-audit-history.md  0006-project-storage-layout.md  0007-provider-independent-architecture.md  0008-tool-security-boundaries.md  0009-apache-20-license.md  0010-no-llm-weight-training-in-critical-path.md  0011-codex-as-development-tool.md  0012-src-layout-and-package-boundaries.md  0013-pydantic-domain-and-event-contracts.md  0014-postgresql-event-store.md  0015-content-addressed-artifact-storage.md  0016-opentelemetry-event-correlation.md  0017-provider-neutral-model-execution.md  0018-provider-retry-and-timeout-policy.md  0019-claude-code-advisory-adapter.md  0020-typed-tool-registry.md  0021-tool-risk-and-approval-policy.md  0022-rootless-docker-sandbox.md  0023-mcp-client-security-boundary.md  0024-problem-representation-engine.md  0025-event-sourced-cognitive-controller.md  0026-controller-budget-and-loop-bounds.md  0027-controller-checkpoint-and-continuation.md  0028-minimal-acceptance-before-verifier-registry.md  0029-verifier-registry-and-execution.md  0030-deterministic-acceptance-policy.md  0031-domain-verifier-safety-boundaries.md  0032-benchmark-artifacts-and-reproducibility.md  0033-external-evaluation-adapters.md  0034-coding-agent-authority-and-workspace-boundary.md  0035-governed-memory-plane-authority.md  0036-bitemporal-semantic-claims.md  0037-relational-semantic-graph-and-wiki.md  0038-context-builder-authority.md  0039-deterministic-hybrid-ranking.md  0040-context-bundle-persistence.md  (+33 more)
docs/architecture/: acceptance-policy.md  approval-model.md  artifact-storage.md  benchmark-framework.md  claude-code-advisory-mode.md  coding-verifiers.md  cognitive-controller.md  context-builder.md  context-bundle.md  controlled-change-management.md  controller-budget.md  controller-checkpoint-recovery.md  controller-clarification.md  controller-planning.md  controller-state-machine.md  corpus-to-memory-factory.md  dependency-classification.md  domain-contracts.md  donor-projects.md  event-model.md  event-naming.md  (+52 more)
schemas/: manifest.json
scripts/: acceptance_evaluate.py  artifact_restore_verify.py  backup_event_store.sh  benchmark_compare.py  benchmark_list.py  benchmark_report.py  benchmark_run.py  bootstrap_github.sh  change.py  change_benchmark.py  change_preflight.py  change_smoke_test.py  check_host_prerequisites.sh  check_repository_language.sh  claude_code_advisory_smoke_test.py  coding_inspect.py  coding_report.py  collect_baseline.sh  collect_nvidia_diagnostics.sh  context.py  context_smoke_test.py  controlled_import_check.py  controller_cancel.py  controller_common.py  controller_inspect.py  controller_replay.py  controller_resume.py  controller_run.py  controller_smoke_test.py  corpus.py  corpus_benchmark.py  corpus_scale_baseline.py  corpus_smoke_test.py  experience.py  experience_scale_baseline.py  experience_smoke_test.py  export_contract_schemas.sh  inspect_export.py  mcp_call_tool.py  mcp_health.py  (+61 more)
tests/: test_lightflow.py  test_memory_policy.py  test_v070_tracing.py
(+1530 files in other folders)
