[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-os"
version = "0.1.0.dev1"
description = "A local, model-independent, self-improving cognitive agent harness."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Viktor Palkovics" }]
keywords = ["agent", "agent-harness", "cognitive-system", "local-ai", "lightagent"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "httpx>=0.28,<1",
    "jsonschema>=4.25,<5",
    "openai>=1.60,<2",
    "pydantic>=2.11,<3",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
benchmark-inspect = []
browser = []
cloud-aws = ["boto3>=1.34,<2"]
lightagent-legacy-memory = []
mcp = ["mcp>=1.23,<2"]
memory-benchmarks = []
memory-postgres = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "pgvector>=0.4,<0.5",
    "sqlalchemy[asyncio]>=2.0,<2.2",
]
semantic-graph = ["networkx>=3.6,<4"]
local-embeddings = ["sentence-transformers>=5,<6"]
observability-langfuse = ["langfuse>=3,<4"]
observability-otel = [
    "opentelemetry-api>=1.35,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.35,<2",
    "opentelemetry-sdk>=1.35,<2",
]
postgres = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<2.2",
]
provider-litellm = []
verification-logic = ["z3-solver>=4.16,<5"]
verification-math = ["sympy>=1.14,<2"]
verification-physics = ["pint>=0.25.3,<0.26"]

[dependency-groups]
dev = [
    "mypy>=1.16,<2",
    "pre-commit>=4,<5",
    "ruff>=0.12,<1",
    "types-PyYAML>=6.0.12,<7",
    "types-jsonschema>=4.25,<5",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9,<10",
]
security = [
    "bandit>=1.8,<2",
    "detect-secrets>=1.5,<2",
    "pip-audit>=2.9,<3",
]
test = [
    "hypothesis>=6,<7",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1,<2",
    "pytest-cov>=6,<7",
    "pytest-timeout>=2,<3",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["cognitive_os*"]
exclude = ["tests*"]
namespaces = false

[tool.setuptools.package-data]
cognitive_os = []

[tool.uv]
package = true

[tool.pytest.ini_options]
markers = [
    "claude_code_live: opt-in test against the locally authenticated Claude Code CLI",
    "contract: offline compatibility tests for the LightAgent boundary",
    "concurrency: tests that exercise simultaneous writers",
    "integration: tests that require an external service",
    "minimax_live: opt-in test against the configured MiniMax API",
    "postgres: tests that require the isolated PostgreSQL test database",
]
